force-app/main/default/objects/Criteria_Group__c.object
<CustomObject>
    <fields>
        <fullName>Enrollment_Component__c</fullName>
        <description>The parent enrollment component for the criteria group.</description>
        <label>Enrollment Component</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipLabel>Criteria Groups</relationshipLabel>
        <relationshipName>Criteria_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Logic__c</fullName>
        <description>The evaluation logic of the criteria group.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>The group number that will be used to reference it in the logic definition on the Enrollment Component. Groups should be numbered 1 - n, where n is the total number of groups associated with the Enrollment Component.</description>
        <label>Group Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName == &apos;Pre_Screen&apos;, &apos;Hard Stop&apos;, &apos;&apos;)</defaultValue>
        <description>Is this group a hard stop or soft stop for the user? This is used exlusively for groups of eligibility criteria and is not valid for other situations.</description>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hard Stop</fullName>
                </value>
                <value>
                    <fullName>Soft Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message that should appear for users if the group evaluates to true. This is only used for groups related to Elibility Screening.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message Content</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <label>Criteria Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Component__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Group_Logic__c</columns>
        <columns>Message__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria Groups</pluralLabel>
    <recordTypes>
        <fullName>Non_Pre_Screen</fullName>
        <active>false</active>
        <label>Non Pre-Screen</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Screen</fullName>
        <active>true</active>
        <label>Pre-Screen</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>