force-app/main/default/objects/Criteria_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Component__c</columns>
    <columns>Group_Number__c</columns>
    <columns>Group_Logic__c</columns>
    <columns>Message__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>